--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images\resumepreview.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="images\McCabe Resume Webcopy 2020.pdf" class="button large">Open Resume</a></li>
+									<li><a href="images\Copy of McCabe Resume Webcopy 20.1 (1).pdf" class="button large">Open Resume</a></li>
 								</ul>
 							</article>
 
@@ -71,7 +71,8 @@
 									<p>This is the board approved graduate research study where I built a knowledge base and developed tools to </br>
 									 study the differences in learning outcomes between face to face and online classroom settings.</p>
 									<ul class="actions special">
-										<li><a href="images\Communicationandeducationstudy.pdf" class="button">Open Study Document</a></li>
+										<li><a href="images\Communicationandeducationstudy.pdf" class="button" target="
+											_blank">Open Study Document</a></li>
 									</ul>
 								</article>
 								<article>
@@ -91,7 +92,7 @@
 										<h2><a href="#">Pong Python Game</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images\pongthumbnail.jpg" alt="" /></a>
-									<p>This simple game was created through the help of a guide, to demonstrate my understanding of basic computer science concepts and Python.</p>
+									<p>This simple game was created through the help of a guide, to demonstrate my understanding of basic computer science concepts and Python. Original source code by Christian Thompson</p>
 									<ul class="actions special">
 										<li><a href="images\python Code for pong.pdf" class="button">Source Code</a></li>
 									</ul>
